Refactor: Refactoring of code and change dependency swagger doc